<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    tools:context=".Ciudades">

    <TextView
        android:id="@+id/tvBienvenida"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/texto_bienvenida"
        android:textColor="@android:color/background_light" />

    <Button
        android:id="@+id/btnMexico"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/texto_boton_mexico"
        android:textColor="@color/colorGrados" />

    <Button
        android:id="@+id/btnLiverpool"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/texto_boton_liverpool"
        android:textColor="@color/colorGrados" />
</LinearLayout>