<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvGrados"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="134dp"
        android:text="@string/texto_grados"
        android:textColor="@color/colorGrados"
        android:textSize="72sp" />

    <TextView
        android:id="@+id/tvEstatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvCiudad"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:layout_marginTop="363dp"
        android:layout_marginEnd="176dp"
        android:layout_marginRight="176dp"
        android:text="@string/texto_estatus"
        android:textColor="@color/colorEstatus"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/tvCiudad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="275dp"
        android:text="@string/texto_ciudad"
        android:textColor="@color/colorCiudad"
        android:textSize="36sp" />

</RelativeLayout>